--- a/index.html
+++ b/index.html
@@ -2,5 +2,9 @@
 <html>
   <head>
      <title>Sin Titulo</title>
+     <link href="css/estilos.css" rel="stylesheet" type="text/css">
   </head>
+  <body>
+    <h1>Proyecto empresarial</h1>
+  </body>
 </html>
